fix: Add correct spacing between to the form and accordion elements Card: https://app.clickup.com/t/2yyw2b7

--- a/src/styles/elements/_details-accordion.css
+++ b/src/styles/elements/_details-accordion.css
@@ -12,7 +12,7 @@
     z-index: var(--details-accordion-z-index);
 }
 
-.details-accordion:last-child {
+.details-accordion:first-child {
     --details-accordion-margin: 0 auto;
 }
 
