--- a/src/styles/globals/form/_form.css
+++ b/src/styles/globals/form/_form.css
@@ -3,7 +3,7 @@
     --form-font-size: var(--font-size-normal);
     --form-font-weight: var(--font-weight-text-normal);
     --form-line-height: var(--line-height-reset);
-    --form-margin: 0 auto var(--spacing-between-elements-normal);
+    --form-margin: var(--spacing-between-elements-normal) 0 auto;
 
     width: var(--form-width);
     max-width: var(--form-max-width);
@@ -14,7 +14,7 @@
     line-height: var(--form-line-height);
 }
 
-.form:last-child {
+.form:first-child {
     --form-margin: 0 auto;
 }
 
